tests/machine/x/java/load_yaml.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsload_yaml4228523657/001/Main.java:14: error: incompatible types: List<Map<String,Object>> cannot be converted to List<Object>
	static List<Object> people = loadYaml("../interpreter/valid/people.yaml");
	                                     ^
1 error


  1| type Person {
  2|   name: string